Cambios Con ProgressDialog

--- a/app/src/main/res/layout/fragment_seg_pagos.xml
+++ b/app/src/main/res/layout/fragment_seg_pagos.xml
@@ -74,7 +74,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@color/AzulOscuro"
+                    android:background="@drawable/boton"
                     android:text="Agregar"
                     android:textSize="18dp" />
 
@@ -88,7 +88,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/AzulOscuro"
+                    android:background="@drawable/boton"
                     android:text="Eliminar"
                     android:textSize="18sp" />
             </LinearLayout>
