--- a/app/src/main/res/layout/fragment_ingreso_pagos_visitas.xml
+++ b/app/src/main/res/layout/fragment_ingreso_pagos_visitas.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".OpcionIngreso.Especial.ingresoPagosVisitas"
+    tools:context=".OpcionIngreso.Especial.IngresoPagosVisitas"
     android:background="@color/FondoTerciario">
 
     <include
