--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -25,7 +25,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="320dp"
-                android:background="@color/FondoSecundario">
+                android:background="@color/AzulOscuro">
 
                 <ImageView
                     android:id="@+id/imageView5"
