--- a/app/src/main/res/layout/fragment_citas.xml
+++ b/app/src/main/res/layout/fragment_citas.xml
@@ -11,9 +11,54 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/menuDP"
+        android:layout_width="136dp"
+        android:layout_height="200dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="52dp"
+        android:clickable="true"
+        android:elevation="10dp"
+        app:fab_addButtonColorNormal="@color/AzulOscuro"
+        app:fab_addButtonColorPressed="@color/FondoSecundario"
+        app:fab_labelStyle="@style/fondoetiqueta"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/crearCita"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:fabSize="normal"
+            app:fab_colorNormal="@color/FondoSecundario"
+            app:fab_colorPressed="@color/AzulOscuro"
+            app:fab_icon="@drawable/icono_citas"
+            app:fab_title="Agregar" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/consultarCita"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:fabSize="normal"
+            app:fab_colorNormal="@color/FondoSecundario"
+            app:fab_colorPressed="@color/AzulOscuro"
+            app:fab_icon="@drawable/icono_buscar"
+            app:fab_title="Consultar" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,96 +67,104 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="100dp" />
+                android:layout_height="70dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iconoR"
+                    android:layout_width="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/AzulOscuro"
+                    android:src="@drawable/ic_aceptado" />
+
+                <TextView
+                    android:id="@+id/etiquetaR"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:textColor="@color/Blanco"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Realizado" />
+
+                <ImageView
+                    android:id="@+id/iconoP"
+                    android:layout_width="10dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/AzulOscuro"
+                    android:src="@drawable/ic_estadocita" />
+
+                <TextView
+                    android:id="@+id/etiquetaP"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:textColor="@color/Blanco"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Pendiente" />
+            </LinearLayout>
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="50dp" />
+                android:layout_height="10dp" />
 
-            <android.support.v7.widget.GridLayout
-                android:id="@+id/menuSeguimiento"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:alignmentMode="alignMargins"
-                app:columnCount="1"
-                app:columnOrderPreserved="false"
-                app:rowCount="4">
+                android:layout_height="25dp"
+                android:orientation="horizontal">
 
-                <android.support.v7.widget.CardView
-                    android:layout_width="wrap_content"
+                <ImageView
+                    android:id="@+id/iconoFecha"
+                    android:layout_width="10dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
-                    android:backgroundTint="@color/AzulOscuro"
-                    android:padding="16dp"
-                    app:cardCornerRadius="12dp"
-                    app:cardElevation="6dp"
-                    app:layout_columnWeight="1"
-                    app:layout_rowWeight="1">
+                    android:layout_weight="1"
+                    android:background="@color/AzulOscuro"
+                    android:src="@drawable/icono_citas" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="16dp">
-
-                        <ImageView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/icono_citas" />
-
-                        <TextView
-                            android:id="@+id/segTratamiento"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp"
-                            android:gravity="center"
-                            android:text="Nuevo"
-                            android:textColor="@color/Blanco"
-                            android:textSize="24sp" />
-
-
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/etiquetaFecha"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
-                    android:backgroundTint="@color/AzulOscuro"
-                    android:padding="16dp"
-                    app:cardCornerRadius="12dp"
-                    app:cardElevation="6dp"
-                    app:layout_columnWeight="1"
-                    app:layout_rowWeight="1">
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="21/07/2019"
+                    android:textColor="@color/Blanco" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="16dp">
+                <ImageView
+                    android:id="@+id/iconoHora"
+                    android:layout_width="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/AzulOscuro"
+                    android:src="@drawable/ic_reloj" />
 
+                <TextView
+                    android:id="@+id/etiquetaHora"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="3:12 AM"
+                    android:textColor="@color/Blanco" />
+            </LinearLayout>
 
-                        <ImageView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:src="@drawable/icono_buscar" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
-                        <TextView
-                            android:id="@+id/segPagos"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="12dp"
-                            android:gravity="center"
-                            android:text="Consultar"
-                            android:textColor="@color/Blanco"
-                            android:textSize="24sp" />
-
-
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-            </android.support.v7.widget.GridLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/listaCitas"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
             <Space
                 android:layout_width="match_parent"
@@ -119,5 +172,7 @@
 
         </LinearLayout>
     </ScrollView>
+
+
 
 </FrameLayout>
