--- a/app/src/main/res/layout/fragment_citas.xml
+++ b/app/src/main/res/layout/fragment_citas.xml
@@ -77,7 +77,7 @@
                 <ImageView
                     android:id="@+id/iconoR"
                     android:layout_width="10dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@color/AzulOscuro"
                     android:src="@drawable/ic_aceptado" />
@@ -85,10 +85,11 @@
                 <TextView
                     android:id="@+id/etiquetaR"
                     android:layout_width="100dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:textSize="18sp"
                     android:textColor="@color/Blanco"
+                    android:background="@color/AzulOscuro"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="Realizado" />
 
@@ -103,10 +104,11 @@
                 <TextView
                     android:id="@+id/etiquetaP"
                     android:layout_width="100dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:textSize="18sp"
                     android:textColor="@color/Blanco"
+                    android:background="@color/AzulOscuro"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="Pendiente" />
             </LinearLayout>
