--- a/app/src/main/res/layout/fragment_citas.xml
+++ b/app/src/main/res/layout/fragment_citas.xml
@@ -76,41 +76,40 @@
 
                 <ImageView
                     android:id="@+id/iconoR"
-                    android:layout_width="10dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="0.2"
                     android:background="@color/AzulOscuro"
                     android:src="@drawable/ic_aceptado" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.3"
+                    android:layout_height="match_parent" />
 
                 <TextView
                     android:id="@+id/etiquetaR"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:textColor="@color/Blanco"
-                    android:background="@color/AzulOscuro"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Realizado" />
-
-                <ImageView
-                    android:id="@+id/iconoP"
-                    android:layout_width="10dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:background="@color/AzulOscuro"
-                    android:src="@drawable/ic_estadocita" />
+                    android:text="Cita Realizada" />
 
-                <TextView
-                    android:id="@+id/etiquetaP"
-                    android:layout_width="100dp"
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.3"
+                    android:layout_height="match_parent" />
+
+                <CheckBox
+                    android:id="@+id/chb_realizado"
+                    android:checked="true"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textSize="18sp"
-                    android:textColor="@color/Blanco"
-                    android:background="@color/AzulOscuro"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:text="Pendiente" />
+                    android:layout_weight="0.1"/>
+
             </LinearLayout>
 
             <Space
@@ -119,44 +118,137 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iconoP"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:background="@color/AzulOscuro"
+                    android:src="@drawable/ic_estadocita" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.3"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/etiquetaP"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textSize="20sp"
+                    android:textColor="@color/Blanco"
+                    android:background="@color/AzulOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Cita Pendiente" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.3"
+                    android:layout_height="match_parent" />
+
+                <CheckBox
+                    android:id="@+id/chb_pendiente"
+                    android:checked="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"/>
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/iconoFecha"
-                    android:layout_width="10dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
                     android:background="@color/AzulOscuro"
                     android:src="@drawable/icono_citas" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.3"
+                    android:layout_height="match_parent" />
 
                 <TextView
                     android:id="@+id/etiquetaFecha"
                     android:layout_width="100dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="18sp"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="21/07/2019"
-                    android:textColor="@color/Blanco" />
+                    android:background="@color/AzulOscuro"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20sp" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.3"
+                    android:layout_height="match_parent" />
+
+                <CheckBox
+                    android:enabled="false"
+                    android:checked="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"/>
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/iconoHora"
-                    android:layout_width="10dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
                     android:background="@color/AzulOscuro"
                     android:src="@drawable/ic_reloj" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.3"
+                    android:layout_height="match_parent" />
 
                 <TextView
                     android:id="@+id/etiquetaHora"
                     android:layout_width="100dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="18sp"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="3:12 AM"
-                    android:textColor="@color/Blanco" />
+                    android:textColor="@color/Blanco"
+                    android:textSize="20sp" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.3"
+                    android:layout_height="match_parent" />
+
+                <CheckBox
+                    android:id="@+id/chb_hora"
+                    android:checked="false"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.1"/>
             </LinearLayout>
 
             <Space
