--- a/app/src/main/res/menu/opciones_pdf.xml
+++ b/app/src/main/res/menu/opciones_pdf.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_aceptar"
-        android:icon="@drawable/ic_check"
+    <item android:id="@+id/action_compartir"
+        android:icon="@drawable/ic_compartir"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
-        android:title="actualizar" />
+        android:title="compartir" />
 
 </menu>
