--- a/app/src/main/res/layout/fragment_ing_hodon.xml
+++ b/app/src/main/res/layout/fragment_ing_hodon.xml
@@ -7,7 +7,6 @@
     tools:context=".OpcionIngreso.Normal.IngHOdon"
     android:background="@color/FondoTerciario">
 
-    <!-- TODO: Update blank fragment layout -->
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
@@ -48,11 +47,37 @@
                 android:text="Diagnostico:"
                 android:textSize="18sp" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <ImageButton
+                    android:id="@+id/selectorPieza"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:background="@color/AzulOscuro"
+                    android:src="@drawable/ic_diente"/>
+
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent" />
+
+                <EditText
+                    android:id="@+id/ing_pieza"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:layout_weight="1"
+                    android:hint="Pieza"
+                    android:inputType="textPersonName" />
+
+                <!--
                 <TextView
                     android:id="@+id/titulo_pieza"
                     android:layout_width="wrap_content"
@@ -67,6 +92,7 @@
                     android:layout_width="180dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
+                -->
 
             </LinearLayout>
 
@@ -85,6 +111,10 @@
                 android:ems="10"
                 android:hint="Costo"
                 android:inputType="numberDecimal" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
