--- a/app/src/main/res/layout/fragment_ing_hodon.xml
+++ b/app/src/main/res/layout/fragment_ing_hodon.xml
@@ -74,6 +74,8 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:layout_weight="1"
+                    android:text="0"
+                    android:enabled="false"
                     android:hint="Pieza"
                     android:inputType="textPersonName" />
 
