--- a/app/src/main/res/layout/fragment_seg_pagos.xml
+++ b/app/src/main/res/layout/fragment_seg_pagos.xml
@@ -7,7 +7,6 @@
     tools:context=".OpcionIngreso.Normal.IngHOdon"
     android:background="@color/FondoTerciario">
 
-    <!-- TODO: Update blank fragment layout -->
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
@@ -38,6 +37,35 @@
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="70dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tituloGasto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/AzulOscuro"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Abono:"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/totalGasto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="00.00"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/titulo_diagnostico"
