--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -74,7 +74,7 @@
                     android:id="@+id/contadorFN"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="125"
+                    android:text="-"
                     android:textColor="@color/Blanco"
                     android:textSize="28sp" />
 
@@ -100,7 +100,7 @@
                     android:id="@+id/contadorPac"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="125"
+                    android:text="-"
                     android:textColor="@color/Blanco"
                     android:textSize="28sp" />
 
@@ -126,7 +126,7 @@
                     android:id="@+id/contadorFE"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="125"
+                    android:text="-"
                     android:textColor="@color/Blanco"
                     android:textSize="28sp" />
 
@@ -163,7 +163,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2.5"
-                    android:text="lucy@gmail.com"
+                    android:text="-"
                     android:textColor="@color/Blanco"
                     android:gravity="center_vertical"
                     android:textSize="18sp"/>
@@ -191,7 +191,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2.5"
-                    android:text="3 Citas Pendietes"
+                    android:text="-"
                     android:textColor="@color/Blanco"
                     android:gravity="center_vertical"
                     android:textSize="18sp"/>
