--- a/app/src/main/res/layout-sw320dp/activity_main.xml
+++ b/app/src/main/res/layout-sw320dp/activity_main.xml
@@ -22,7 +22,7 @@
         app:srcCompat="@drawable/logonuevo" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/logoEmpesa"
         android:layout_width="191dp"
         android:layout_height="54dp"
         android:layout_marginBottom="38dp"
