--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="FondoPrincipal">#617D96</color>
     <color name="FondoSecundario">#313F4C</color>
     <color name="FondoTerciario">#566F85</color>
+    <color name="FondoSecundario2">#293540</color>
     <color name="AzulOscuro">#1F303F</color>
     <color name="Blanco">#FFFFFF</color>
     <color name="Gris">#838383</color>
