--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,5 +4,7 @@
     android:layout_height="wrap_content"
     android:elevation="20dp"
     android:background="@color/AzulOscuro"
-    android:textAlignment="center">
+    android:textAlignment="center"
+    android:gravity="center_horizontal"
+    android:layout_gravity="center_horizontal">
 </android.support.v7.widget.Toolbar>
